progress on authr, time, location facets

--- a/client/love.jade
+++ b/client/love.jade
@@ -99,7 +99,7 @@ template(name='love')
                         // +love_tag_picker
                 .column
                     i.clock.big.icon
-                    each picked_time
+                    each picked_times
                         a.unpick_time.ui.black.inverted.circular.large.compact.button(href='#')
                             strong #{this}
                     each time_results
