--- a/client/love.jade
+++ b/client/love.jade
@@ -28,10 +28,10 @@ template(name='love')
                 input.add_author(type='text' placeholder='...')
             
             if can_submit
-                .ui.circular.button.submit
+                .ui.button.submit
                     |submit
             else
-                .ui.basic.circular.button.submit
+                .ui.basic.button.submit
                     i.send.icon
                     |submit
         .sixteen.wide.center.aligned.column
@@ -45,15 +45,16 @@ template(name='love')
                 //         i.remove.icon
                 each picked_tags
                     +unpick_tag
-            .ui.icon.input
-                i.search.icon
-                input.search_group_tag(type='text' value=group_query)
+            // .ui.icon.input
+            //     i.search.icon
+            //     input.search_group_tag(type='text' value=group_query)
             each result_tags
                 // .ui.label #{this}
                 +tag_picker
             .ui.stackable.four.column.grid
                 .column
-                    .ui.inline.big.header l
+                    if l_results.count
+                        .ui.inline.big.header l
                     each picked_l
                         a.unpick_l.ui.white.inverted.circular.large.compact.button(href='#')
                             strong #{this}
@@ -61,7 +62,8 @@ template(name='love')
                         if name
                             .ui.basic.circular.tiny.compact.button.pick_l #{name}
                 .column
-                    .ui.inline.big.header o
+                    if o_results.count
+                        .ui.inline.big.header o
                     each picked_o
                         a.unpick_o.ui.white.inverted.circular.large.compact.button(href='#')
                             strong #{this}
@@ -69,7 +71,8 @@ template(name='love')
                         if name
                             .ui.basic.circular.tiny.compact.button.pick_o #{name}
                 .column
-                    .ui.inline.big.header v
+                    if v_results.count
+                        .ui.inline.big.header v
                     each picked_v
                         a.unpick_v.ui.white.inverted.circular.large.compact.button(href='#')
                             strong #{this}
@@ -77,7 +80,8 @@ template(name='love')
                         if name
                             .ui.basic.circular.tiny.compact.button.pick_v #{name}
                 .column
-                    .ui.inline.big.header e
+                    if e_results.count
+                        .ui.inline.big.header e
                     each picked_e
                         a.unpick_e.ui.white.inverted.circular.large.compact.button(href='#')
                             strong #{this}
@@ -85,7 +89,8 @@ template(name='love')
                         if name
                             .ui.basic.circular.tiny.compact.button.pick_e #{name}
                 .column
-                    i.big.marker.icon
+                    if location_results.count
+                        i.big.marker.icon
                     each picked_locations
                         a.unpick_location.ui.white.inverted.circular.large.compact.button(href='#')
                             strong #{this}
@@ -93,7 +98,8 @@ template(name='love')
                         if name
                             .ui.basic.circular.tiny.compact.button.pick_location #{name}
                 .column
-                    i.big.user.icon
+                    if author_results.count
+                        i.big.user.icon
                     each picked_authors
                         a.unpick_author.ui.white.inverted.circular.large.compact.button(href='#')
                             strong #{this}
@@ -101,13 +107,14 @@ template(name='love')
                         if name
                             .ui.basic.circular.tiny.compact.button.pick_author #{name}
                 .column
-                    i.clock.big.icon
+                    if time_results.count
+                        i.clock.big.icon
                     each picked_times
                         a.unpick_time.ui.large.white.circular.large.compact.button(href='#')
                             strong #{this}
                     each time_results
                         .ui.basic.circular.tiny.compact.button.pick_time #{name}
-            .ui.hidden.divider
+            .ui.divider
             .ui.stackable.four.column.centered.grid.scrolling
                 each expressions
                     .center.aligned.column
@@ -136,7 +143,7 @@ template(name='tag_picker')
     .ui.compact.basic.circular.tertiary.button.zoomer.pick_tag(title="#{count} results" class="#{picker_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
+                img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
         strong #{name}
         // if in_dev
         //     small #{count}
