--- a/client/sub.jade
+++ b/client/sub.jade
@@ -11,7 +11,7 @@ template(name='subreddit')
                 //     i.large.chevron.left.grey.icon
                 //     i.large.reddit.icon
                 //     // img.ui.mini.inline.image(src=icon_img)
-                img.get_info.shadowed.ui.inline.image(src=logo_url )
+                // img.get_info.shadowed.ui.inline.image(src=logo_url )
                 .ui.inline.header.get_info #{data.display_name}
                 if selected_sub_tags
                     // if many_tags
@@ -95,7 +95,7 @@ template(name='subreddit')
                         .ui.center.aligned.segment
                             i.big.loading.yin.yang.icon
             .four.wide.column.scrolling.seg
-                img.ui.inline.image(src=data.header_img)
+                // img.ui.inline.image(src=data.header_img)
                 .ui.inline.header.pull_latest #{data.title}
                 // +alpha
                 div
