--- a/client/client.jade
+++ b/client/client.jade
@@ -1,5 +1,5 @@
 head
-    title all you need is
+    title what is
     meta(name='viewport', content='user-scalable=no, initial-scale=1.0, maximum-scale=1.0, width=device-width')
     meta(name='apple-mobile-web-app-capable', content='yes')
     meta(name='apple-mobile-web-app-status-bar-style', content='black')
@@ -62,10 +62,18 @@ template(name='nav')
         a.item(href="/tarot") 
             i.star.icon
             |tarot
+        a.item(href="/r/recipes") 
+            i.food.icon
+            |recipes
+        a.item(href="/love") 
+            i.university.icon
+            |bank
         .item 
             i.shop.icon
             |shop
-
+        .right.menu
+            .item register
+            .item login
 template(name='not_found')
     .ui.basic.center.aligned.segment
         a(href="/discrete")
