--- a/client/group.jade
+++ b/client/group.jade
@@ -79,7 +79,7 @@ template(name='tag_selector')
     .ui.compact.circular.basic.button.zoomer.select_tag(title="#{count} results" class="#{selector_class} #{thinking_class}")
         if term
             if term.watson.metadata.image
-                img.ui.mini.inline.image.superzoom(src=term.watson.metadata.image )    
+                img.ui.avatar.image.superzoom(src=term.watson.metadata.image )    
         strong #{name}
         // if in_dev
         //     small #{count}
