--- a/client/client.jade
+++ b/client/client.jade
@@ -55,65 +55,65 @@ template(name='layout')
     //     #main_area.pusher(class=currentUser.invert_class)
 
 template(name='nav')
-    .ui.fluid.attached.large.borderless.menu.hscroll
+    .ui.fluid.attached.large.borderless.ten.item.menu.hscroll
         a.icon.item.toggle_sidebar
             i.large.bars.icon
-        a.item(href="/") 
-            i.heart.icon
-            |home
-        a.item(href="/r/tarot") 
-            i.star.icon
-            |tarot
-        a.item(href="/r/recipes") 
-            i.food.icon
-            |food
-        a.item(href="/r/love") 
-            i.university.icon
-            |bank
-        .item 
-            i.shop.icon
-            |shop
-        .right.menu
-            if unread_count
-                a.item.alerts.select_term(href="#" class=alert_toggle_class)
-                    i.large.bell.icon
-                    if unread_count
-                        |#{unread_count}
-            else
-                a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
-                    i.large.outline.bell.icon
-            a.icon.item(href="/chat" title='chat') 
-                i.chat.large.outline.icon
-            // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
-            //     i.chat.large.icon
-            if is_dev 
-                .icon.item
-                    i.large.code.icon
-            // if currentUser
-            // a.large.item.toggle_rightbar(class="{{isActiveRoute 'user_dashboard'}}")
-            a.large.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
-                //- i.large.user.large.icon
-                if currentUser.profile_image_id
-                    if is_admin
-                        i.large.shield.icon(title='admin mode on')
-                    else
-                        img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
-                else 
-                    i.large.user.large.icon
-                strong.mobile.hidden #{currentUser.name}
-            // a.mobile.hidden.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
-            //     |#{currentUser.points}p
-            a.icon.large.item.toggle_rightbar.select_term
-                i.ellipsis.vertical.large.icon
-            // else
-            //     // a.item(href="/register" title='register')
-            //     //     // |login
-            //     //     +icon name='plus'
-            //     //     // i.large.chevron.right.icon
-            //     a.item(href="/login" title='login')
-            //         // |login
-            //         +icon name='login-rounded-right'
-            //         // i.large.chevron.right.icon
+        a.icon.item(href="/") 
+            i.heart.large.icon
+            // |home
+        a.icon.item(href="/r/tarot") 
+            i.star.large.icon
+            // |tarot
+        a.icon.item(href="/r/recipes") 
+            i.food.large.icon
+            // |food
+        a.icon.item(href="/r/love") 
+            i.university.large.icon
+            // |bank
+        .icon.item 
+            i.shop.large.icon
+            // |shop
+        // .right.menu
+        if unread_count
+            a.item.alerts.select_term(href="#" class=alert_toggle_class)
+                i.large.bell.icon
+                if unread_count
+                    |#{unread_count}
+        else
+            a.icon.item(href="/inbox" class="{{isActiveRoute 'inbox'}}")
+                i.large.outline.bell.icon
+        a.icon.item(href="/chat" title='chat') 
+            i.chat.large.outline.icon
+        // a.icon.item(href="/u/#{currentUser.username}/messages" class="{{isActivePath 'user_messages'}}" title="#{user.username} messages")
+        //     i.chat.large.icon
+        if is_dev 
+            .icon.item
+                i.large.code.icon
+        // if currentUser
+        // a.large.item.toggle_rightbar(class="{{isActiveRoute 'user_dashboard'}}")
+        a.large.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_dashboard'}}")
+            //- i.large.user.large.icon
+            if currentUser.profile_image_id
+                if is_admin
+                    i.large.shield.icon(title='admin mode on')
+                else
+                    img.ui.avatar.compact.image(src="{{c.url currentUser.profile_image_id height=200 width=200 gravity='face' crop='fill'}}" class=currentUser.invert_class)
+            else 
+                i.large.user.large.icon
+            strong.mobile.hidden #{currentUser.name}
+        // a.mobile.hidden.item(href="/u/#{currentUser.username}" class="{{isActiveRoute 'user_credits'}}")
+        //     |#{currentUser.points}p
+        a.icon.large.item.toggle_rightbar.select_term
+            i.ellipsis.vertical.large.icon
+        // else
+        //     // a.item(href="/register" title='register')
+        //     //     // |login
+        //     //     +icon name='plus'
+        //     //     // i.large.chevron.right.icon
+        //     a.item(href="/login" title='login')
+        //         // |login
+        //         +icon name='login-rounded-right'
+        //         // i.large.chevron.right.icon
     if session_is 'viewing_alerts'
         +topbar
 
