--- a/client/love.jade
+++ b/client/love.jade
@@ -136,8 +136,12 @@ template(name='love')
                                 // .ui.small.basic.circular.compact.button.pick_flat_tag #{this}
                             each timestamp_tags
                                 .ui.small.basic.circular.compact.button.pick_flat_time #{this}
+                            i.grey.marker.icon
                             |#{location}
+                            i.grey.user.outline.icon
                             |#{author}
+                            a.ui.icon.circular.button(href="/love/#{_id}/view")
+                                i.chevron.right.icon
                                 
                                 
                                 
@@ -170,3 +174,52 @@ template(name='flat_tag_picker')
         | #{this}
         // if in_dev
         //     small #{count}
+
+
+template(name='love_view')
+    with doc_by_id
+        .ui.stackable.grid
+            .row 
+                .four.wide.column
+                    .ui.segmen
+                        a.ui.large.icon.button(href="/")
+                            i.chevron.left.icon
+                        .ui.large.inline.header
+                            each tags
+                                .ui.label #{this}
+                        .ui.header #{l_value}
+                        .ui.header #{o_value}
+                        .ui.header #{v_value}
+                        .ui.header #{e_value}
+                        // div
+                        // .ui.inline.grey.header {{from_now start_datetime}}
+                        
+                        if can_edit
+                            a.edit_group_post(href="/#{group}/p/#{_id}/edit" title='edit')
+                                i.large.link.pencil.icon
+                        | #{views} views
+                        +array_edit key='tags' label='tags' direct=true
+                        // +voting_full
+                        +link_view key='link' label='link' direct=true
+    
+                        +array_edit key='time_tags' label='time tags' icon='clock' direct=true
+                        +array_edit key='location_tags' label='location tags' icon='marker' direct=true
+                .twelve.wide.column.scrolling
+                    if image_link
+                        a(href="/#{group}")
+                            +image_link_view key='image_link' direct=true
+                    if image_id
+                        a(href="/#{group}")
+                            img.ui.fluid.rounded.image(src="{{c.url image_id }}" class=currentUser.invert_class)
+                    if youtube_id
+                        +youtube_view key='youtube_id' label='youtube id' direct=true
+                    if raw 
+                        |!{raw}
+                    .say_this.say_body
+                        |!{content}
+                    div 
+                    .spacer
+                    .spacer
+                    +comments
+                    if watson
+                        +watson_view
