--- a/parts/profile/user_dashboard.jade
+++ b/parts/profile/user_dashboard.jade
@@ -26,40 +26,40 @@ template(name='user_dashboard')
                 .medscroll.ui.segments
                     each user_credits
                         +user_credit_segment
-            // .column
-            //     a.ui.inline.spaced.header(href="/u/#{username}/debits")
-            //         i.chevron.up.icon
-            //         |#{total_debit_amount}p
-            //         // |sent
-            //         small(title='debit count') (#{debit_count}x)
-            //         small(title='rank') ##{global_debit_count_rank}
-            //     i.tags.icon(title='credit tags')
-            //     each debit_tags
-            //         .ui.small.basic.circular.label #{title} 
-            //             // small #{count}
+            .column
+                a.ui.inline.spaced.header(href="/u/#{username}/debits")
+                    i.chevron.up.icon
+                    |#{total_debit_amount}p
+                    // |sent
+                    small(title='debit count') (#{debit_count}x)
+                    small(title='rank') ##{global_debit_count_rank}
+                i.tags.icon(title='credit tags')
+                each debit_tags
+                    .ui.small.basic.circular.label #{title} 
+                        // small #{count}
     
-            //     div
-            //     .medscroll.ui.segments
-            //         each user_debits
-            //             +user_debit_segment
-            // .column
-            //     a.ui.inline.spaced.header(href="/u/#{username}/requests")
-            //         i.concierge.bell.icon
-            //         |requests
-            //     .ui.small.header (#{total_fulfilled_amount}p total fulfilled)
-            //     .ui.small.header (#{fulfilled_count}p total fulfilled count)
-            //     .medscroll
-            //         each user_requests
-            //             .ui.card
-            //                 if image_id
-            //                     img.ui.image(src="{{c.url image_id height=100 width=200}}" class=currentUser.invert_class)
-            //                 .content.zoom.pointer
-            //                     a.header(href="/request/#{_id}/view")
-            //                         |#{point_bounty}pts: #{title}
-            //                     // |!{description}
-            //                     |status: #{status}
-            //                     if complete 
-            //                         |completed by #{completer.name}
+                div
+                .medscroll.ui.segments
+                    each user_debits
+                        +user_debit_segment
+            .column
+                a.ui.inline.spaced.header(href="/u/#{username}/requests")
+                    i.concierge.bell.icon
+                    |requests
+                .ui.small.header (#{total_fulfilled_amount}p total fulfilled)
+                .ui.small.header (#{fulfilled_count}p total fulfilled count)
+                .medscroll
+                    each user_requests
+                        .ui.card
+                            if image_id
+                                img.ui.image(src="{{c.url image_id height=100 width=200}}" class=currentUser.invert_class)
+                            .content.zoom.pointer
+                                a.header(href="/request/#{_id}/view")
+                                    |#{point_bounty}pts: #{title}
+                                // |!{description}
+                                |status: #{status}
+                                if complete 
+                                    |completed by #{completer.name}
             .column
                 a.ui.inline.spaced.header(href="/u/#{username}/events")
                     i.calendar.icon
