--- a/parts/profile/profile.jade
+++ b/parts/profile/profile.jade
@@ -53,70 +53,70 @@ template(name='profile_layout')
                         if is_dev
                             .ui.small.inline.header #{_id}
 
-                        // unless is_current_user
-                        //     if currentUser
-                        //         // div
-                        //         +user_friend_button 
-                        // a.ui.large.icon.button(href="/u/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
-                        //     i.dashboard.large.icon
-                        //     // |dashboard
-                        // if is_current_user
-                        //     a.ui.large.icon.button(href="/u/#{username}/edit/membership" class="{{isActiveRoute 'user_finance'}}")
-                        //         i.money.large.icon
-                        // unless is_current_user
-                        // .ui.basic.circular.button.tip(title='send tip')
-                        //     i.large.dollar.green.icon
-                        //     span tip
-                        // if i_have_points
-                        //     .ui.basic.circular.button.send(title='send points')
-                        //         i.red.gift.large.icon
-                        //         span send pts
-                        //     // .ui.basic.circular.button.request(title='request points')
-                        //     //     i.concierge.bell.large.teal.icon
-                        //     //     span request
-                        // else
-                        //     .ui.disabled.basic.circular.button(title='send points')
-                        //         i.red.gift.large.icon
-                        //         span send pts
-                        //     // .ui.disabled.basic.circular.button(title='request points')
-                        //     //     i.concierge.bell.teal.icon
-                        //     //     span request
+                        unless is_current_user
+                            if currentUser
+                                // div
+                                +user_friend_button 
+                        a.ui.large.icon.button(href="/u/#{username}/dashboard" class="{{isActiveRoute 'user_dashboard'}}")
+                            i.dashboard.large.icon
+                            // |dashboard
+                        if is_current_user
+                            a.ui.large.icon.button(href="/u/#{username}/edit/membership" class="{{isActiveRoute 'user_finance'}}")
+                                i.money.large.icon
+                        unless is_current_user
+                            .ui.basic.circular.button.tip(title='send tip')
+                                i.large.dollar.green.icon
+                                span tip
+                        if i_have_points
+                            .ui.basic.circular.button.send(title='send points')
+                                i.red.gift.large.icon
+                                span send pts
+                            // .ui.basic.circular.button.request(title='request points')
+                            //     i.concierge.bell.large.teal.icon
+                            //     span request
+                        else
+                            .ui.disabled.basic.circular.button(title='send points')
+                                i.red.gift.large.icon
+                                span send pts
+                            // .ui.disabled.basic.circular.button(title='request points')
+                            //     i.concierge.bell.teal.icon
+                            //     span request
                         a.ui.large.compact.basic.circular.button(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
                             i.chat.large.blue.icon
                             | message
         
         
-                    .twelve.wide.column.profile_yield
+                    .twelve.wide.column
                         a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/" class="{{isActiveRoute 'user_dashboard'}}" title="#{user.username} dashboard")
                             i.large.dashboard.icon
                             span dashboard
                         a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/about" class="{{isActiveRoute 'user_about'}}" title="#{user.username} info")
                             i.info.large.icon
                             span about
-                        // a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
-                        //     i.large.chevron.down.icon
-                        //     span pts received
-                        // a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
-                        //     i.large.gift.icon
-                        //     span pts sent
-                        // a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
-                        //     i.large.dollar.icon
-                        //     // span credit
+                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credits" class="{{isActiveRoute 'user_credits'}}" title="#{user.username} credits")
+                            i.large.chevron.down.icon
+                            span pts received
+                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/debits" class="{{isActiveRoute 'user_sent'}}" title="#{user.username} sent")
+                            i.large.gift.icon
+                            span pts sent
+                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/credit" class="{{isActiveRoute 'user_credit'}}" title="#{user.username} credit")
+                            i.large.dollar.icon
+                            // span credit
                         a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/events" class="{{isActiveRoute 'user_events'}}" title="#{user.username} events")
                             i.calendar.large.icon
                             span events
-                        // a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
-                        //     i.large.concierge.bell.icon
-                        //     span requests
-                        // a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
-                        //     i.large.hand.holding.heart.icon
-                        //     span offers
+                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/requests" class="{{isActiveRoute 'user_requests'}}" title="#{user.username} requests")
+                            i.large.concierge.bell.icon
+                            span requests
+                        a.ui.large.basic.circular.button.select_term.profile_nav_item(href="/u/#{username}/offers" class="{{isActiveRoute 'user_offers'}}" title="#{user.username} offers")
+                            i.large.hand.holding.heart.icon
+                            span offers
                         a.ui.large.basic.circular.compact.button.select_term.profile_nav_item(href="/u/#{username}/messages" class="{{isActiveRoute 'user_messages'}}" title="#{user.username} messages")
                             i.chat.large.icon
                             span chat
-                        // a.ui.large.compact.basic.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
-                        //     i.certificate.large.icon
-                        //     span.mobile.hidden badges
+                        a.ui.large.compact.basic.button(href="/u/#{username}/badges" class="{{isActiveRoute 'user_badges'}}" title="#{user.username} badges")
+                            i.certificate.large.icon
+                            span.mobile.hidden badges
                         a.ui.large.compact.basic.circular.compact.button(href="/u/#{username}/food" class="{{isActiveRoute 'user_genekeys'}}" title="#{user.username} genekeys")
                             i.large.food.icon
                             span food
@@ -124,7 +124,9 @@ template(name='profile_layout')
                         // .spacer
                         if is_dev
                             +print_this
-                        +yield    
+                        .ui.hidden.divider
+                        .profile_yield
+                            +yield    
                       
 
 
